add in signed in user to the exclusions or reservations SSCS-10865